@@ -8,95 +8,98 @@ import net.erasmatov.crudapp.repository.jdbc.JdbcDeveloperRepositoryImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertSame;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.isA;
+import static org.mockito.Mockito.*;
+import static org.mockito.internal.verification.VerificationModeFactory.times;
 
 @ExtendWith(MockitoExtension.class)
 class DeveloperServiceTest {
-    @Mock
-    JdbcDeveloperRepositoryImpl developerRepository;
     @InjectMocks
-    DeveloperService developerService = new DeveloperService();
-    List<Developer> developersList;
-    Developer developerFirst;
-    Developer developerSecond;
+    private DeveloperService developerService;
+    @Mock
+    private JdbcDeveloperRepositoryImpl developerRepository;
 
-
-    @Test
-    void getAllDevelopers() {
-        when(developerRepository.getAll()).thenReturn(developersList);
-        List<Developer> currentList = developerService.getAllDevelopers();
-        assertEquals(developersList.get(0), currentList.get(0));
-    }
-
-
-    @Test
-    void createDeveloper() {
-        when(developerRepository.save(developerSecond)).thenReturn(developerSecond);
-        developersList.add(developerService.createDeveloper(developerSecond));
-        assertSame(developerSecond, developersList.get(1));
-    }
-
-
-    @Test
-    void getDeveloperById() {
-        when(developerRepository.getById(1)).thenReturn(developerFirst);
-        Developer developer = developerService.getDeveloperById(1);
-        assertSame(developerFirst, developer);
-    }
-
-
-    @Test
-    void updateDeveloper() {
-        Developer developer = developerFirst;
-        developer.setId(4);
-        when(developerRepository.update(developer)).thenReturn(developer);
-
-        Developer updatedDeveloper = developerRepository.update(developer);
-        assertEquals(developer.getId(), updatedDeveloper.getId());
-    }
-
-
-    @Test
-    void deleteDeveloperById() {
-        Mockito.doNothing().when(developerRepository).deleteById(any(Integer.class));
-        Mockito.verify(developerRepository, times(1)).deleteById(any());
-        developerService.deleteDeveloperById(1);
-    }
-
+    private List<Developer> developerList;
+    private Developer developer1;
+    private Developer developer2;
 
     @BeforeEach
     void setUp() {
-        developersList = new ArrayList<>();
+        developer1 = new Developer(1, "Erlan", "Smatov",
+                List.of(new Skill(1, "Smart", Status.ACTIVE),
+                        new Skill(2, "Fast", Status.ACTIVE)),
+                new Specialty(1, "Java", Status.ACTIVE),
+                Status.ACTIVE);
 
-        developerFirst = new Developer();
-        developerFirst.setId(1);
-        developerFirst.setFirstName("Erlan");
-        developerFirst.setLastName("Smatov");
-        developerFirst.setSkills(new ArrayList<>(Arrays.asList(new Skill(1, "Proactive", Status.ACTIVE))));
-        developerFirst.setSpecialty(new Specialty(2, "Java", Status.ACTIVE));
-        developerFirst.setStatus(Status.ACTIVE);
+        developer2 = new Developer(2, "Maria", "Mudunova",
+                List.of(new Skill(3, "Reliable", Status.ACTIVE),
+                        new Skill(2, "Fast", Status.ACTIVE)),
+                new Specialty(2, "Javascript", Status.ACTIVE),
+                Status.ACTIVE);
 
-        developerSecond = new Developer();
-        developerSecond.setId(2);
-        developerSecond.setFirstName("Mariia");
-        developerSecond.setLastName("Mudunova");
-        developerSecond.setSkills(new ArrayList<>(Arrays.asList(new Skill(3, "Fast", Status.ACTIVE), new Skill(4, "Responsible", Status.ACTIVE))));
-        developerSecond.setSpecialty(new Specialty(3, "JavaScript", Status.ACTIVE));
-        developerSecond.setStatus(Status.ACTIVE);
-
-        developersList.add(developerFirst);
+        developerList = List.of(developer1, developer2);
     }
+
+    @Test
+    void getAllDevelopers() {
+        when(developerRepository.getAll()).thenReturn(List.of(developer1, developer2));
+
+        List<Developer> resultDevList = developerService.getAllDevelopers();
+        assertIterableEquals(developerList, resultDevList,
+                "list of developers is not equals");
+    }
+
+    @Test
+    void createDeveloper() {
+        when(developerRepository.save(developer1)).thenReturn(developer1);
+
+        Developer resultDeveloper = developerService.createDeveloper(developer1);
+        assertSame(developer1, resultDeveloper,
+                "saved developer is not same");
+    }
+
+    @Test
+    void getDeveloperById() {
+        when(developerRepository.getById(isA(Integer.class))).thenAnswer(invocation -> {
+            switch ((Integer) invocation.getArgument(0)) {
+                case 1:
+                    return developer1;
+                case 2:
+                    return developer2;
+                default:
+                    return null;
+            }
+        });
+        Developer resultDeveloper = developerService.getDeveloperById(2);
+
+        ArgumentCaptor<Integer> requestCaptor = ArgumentCaptor.forClass(Integer.class);
+        verify(developerRepository, times(1)).getById(requestCaptor.capture());
+
+        assertEquals(resultDeveloper.getId(), requestCaptor.getValue());
+        assertSame(developer2, resultDeveloper, "received developer is not same");
+    }
+
+    @Test
+    void updateDeveloper() {
+        when(developerRepository.update(any(Developer.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0, Developer.class));
+        developerService.updateDeveloper(developer1);
+        verify(developerRepository, times(1)).update(any(Developer.class));
+    }
+
+    @Test
+    void deleteDeveloperById() {
+        doNothing().when(developerRepository).deleteById(isA(Integer.class));
+        developerService.deleteDeveloperById(2);
+        verify(developerRepository, times(1)).deleteById(isA(Integer.class));
+    }
+
 }
